fix: Layout dos filmes dando overflow #16

--- a/EmExibicao/assets/css/em-exibicao/indicacoes.css
+++ b/EmExibicao/assets/css/em-exibicao/indicacoes.css
@@ -6,7 +6,6 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 70vh;
   justify-content: center;
   margin: 3% auto;
   width: 90%;
